# LightSalon

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
src/pepe_exe/: Cargo.toml
src/pepe_exe/src/: app.rs  main.rs
src/pepe_exe/src/ui/: main_image.rs  main_image.wgsl  mod.rs  thumbnail.rs
src/salon_core/: Cargo.toml
src/salon_core/src/: buffer.rs  edit.rs  editor.rs  engine.rs  image.rs  lib.rs  library.rs  op.rs  program.rs  runtime.rs  session.rs
src/salon_core/src/editor/: edit.rs  editor.rs  global_edit.rs  ir_generator.rs  masked_edit.rs  mod.rs  result.rs
src/salon_core/src/engine/: action_desc.rs  edit_desc.rs  engine.rs  execution_context.rs  mod.rs  op.rs  op_impl_collection.rs  result.rs  toolbox.rs  value_store.rs
src/salon_core/src/engine/common/: histogram.rs
src/salon_core/src/engine/ops/: add_mask.rs  apply_masked_edits.rs  basic_statistics.rs  brightness.rs  brightness.wgsl  collect_data_for_editor.rs  collect_statistics.rs  color_mix.rs  contrast.rs  crop.rs  curve.rs  dehaze.rs  dehaze_apply.rs  dehaze_prepare.rs  exposure.rs  exposure.wgsl  framing.rs  global_mask.rs  highlights.rs  highlights_shadows.rs  histogram.rs  histogram.wgsl  invert_mask.rs  linear_gradient_mask.rs  mod.rs  radial_gradient_mask.rs  resize.rs  rotate_and_crop.rs  saturation.rs  saturation.wgsl  scale.rs  shadows.rs  subtract_mask.rs  temperature_tint.rs  vibrance.rs  vibrance_saturation.rs  vignette.rs
src/salon_core/src/engine/ops/shaders/: add_mask.wgsl  apply_masked_edits.wgsl  basic_statistics_clear.wgsl  basic_statistics_compute.wgsl  basic_statistics_divide.wgsl  basic_statistics_sum.wgsl  color_mix.wgsl  compute_curve_points.wgsl  contrast.wgsl  crop.wgsl  curve.wgsl  dehaze.wgsl  dehaze_apply.wgsl  dehaze_clear_histogram.wgsl  dehaze_compute_histogram.wgsl  dehaze_estimate_airlight.wgsl  dehaze_prepare.wgsl  exposure.wgsl  framing.wgsl  global_mask.wgsl  highlights.wgsl  highlights_shadows.wgsl  histogram.wgsl  histogram_clear.wgsl  histogram_compute.wgsl  invert_mask.wgsl  linear_gradient_mask.wgsl  radial_gradient_mask.wgsl  resize.wgsl  rotate_and_crop.wgsl  saturation.wgsl  shadows.wgsl  subtract_mask.wgsl  temperature_tint.wgsl  vibrance.wgsl  vignette.wgsl  (+1 more)
src/salon_core/src/engine/shader/: color_spaces.wgsl  library.rs  mod.rs  shader.rs
src/salon_core/src/ir/: id.rs  mask.rs  mod.rs  module.rs  op.rs  value.rs
src/salon_core/src/ops/: exposure.rs  exposure.wgsl
src/salon_core/src/runtime/: bind_group_manager.rs  buffer.rs  color_space_converter.rs  color_space_converter.wgsl  commands.rs  image.rs  mipmap_generator.rs  mod.rs  runtime.rs  sampler.rs  toolbox.rs
src/salon_core/src/runtime/utils/: bind_group_manager.rs  color_space_converter.rs  color_space_converter.wgsl  image_format_converter.rs  image_format_converter.wgsl  image_resizer.rs  image_resizer.wgsl  image_to_buffer_copier.rs  image_to_buffer_copier.wgsl  mipmap_generator.rs  mipmap_generator.wgsl  mod.rs  toolbox.rs
src/salon_core/src/services/: edit_writer.rs  mod.rs  services.rs  thumbnail_generator.rs
src/salon_core/src/session/: mod.rs  session.rs
src/salon_core/src/shader/: color_spaces.wgsl  library.rs  random.wgsl  splines.wgsl
src/salon_core/src/utils/: color_space_converter.rs  color_space_converter.wgsl  color_spaces.rs  mat.rs  math.rs  mipmap.rs  mipmap_generator.rs  mod.rs  rectangle.rs  spline.rs  uuid.rs  vec.rs
src/salon_core/src/versioning/: version.rs
src/salon_exe/: Cargo.toml
src/salon_exe/src/: app.rs  main.rs
src/salon_exe/src/ui/: app_ui.rs  app_ui_state.rs  bottom_bar.rs  color_adjust.rs  color_mixer.rs  curve.rs  edit_menu.rs  editor.rs  effects.rs  export_panel.rs  file_dialogues.rs  file_menu.rs  framing.rs  histogram.rs  image_library.rs  keyboard_response.rs  library_albums_browser.rs  library_images_browser.rs  library_side_panel.rs  light_adjust.rs  main_image.rs  masking.rs  menu_bar.rs  mod.rs  rotate_and_crop.rs  thumbnail.rs  utils.rs
src/salon_exe/src/ui/shaders/: editor_slider_rect.wgsl  image_framing.wgsl  image_geometry_edit.wgsl  main_image.wgsl  mask_indicator.wgsl  thumbnail.wgsl
src/salon_exe/src/ui/widgets/: colored_radio_button.rs  colored_slider.rs  colored_slider_rect.rs  editor_slider.rs  editor_slider_rect.rs  image_framing.rs  image_geometry_edit.rs  main_image.rs  mask_indicator.rs  mod.rs  thumbnail.rs
(+24 files in other folders)
