[package]
name = "pepe_exe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pepe_exe"
path = "src/main.rs"

[dependencies]
env_logger = "0.10"
log = "0.4"
wgpu = "0.17.0"
pollster = "0.3.0"

pepe_core = { path = "../pepe_core" }

eframe = { version = "0.22.0", features = ["wgpu"], git = "https://github.com/emilk/egui" }

bytemuck = "1.7.1"

image = "0.24.0"