[package]
name = "salon_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "salon_core"
path = "src/lib.rs"

[dependencies]
wgpu = "0.19.0"
image = "0.24.0"
serde = "1.0"
serde_json = "1.0"

bytemuck = "1.7.1"
kamadak-exif = "0.5.5"
num = "0.4"
log = { version = "0.4", features = ["std"] }

flume = "0.11.0"

