[package]
name = "salon_exe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "salon_exe"
path = "src/main.rs"

[dependencies]
env_logger = "0.10"
log = "0.4"
wgpu = "0.18.0"
futures = "0.3.0"
pollster = "0.3.0"
bytemuck = "1.7.1"
image = "0.24.0"
rfd = "0.12.0"
serde_json = "1.0"

eframe = { version = "0.25.0", default-features = false, features = [
    "wgpu",
    "accesskit",
    "default_fonts",
]}
egui_extras = { version = "0.25.0" }
egui_plot = { version = "0.25.0" }

salon_core = { path = "../salon_core" }

instant = "0.1.12"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
