[package]
name = "salon_exe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "salon_exe"
path = "src/main.rs"

[dependencies]
wgpu = "0.19.0"
futures = "0.3.0"
pollster = "0.3.0"
bytemuck = "1.7.1"
image = "0.24.0"
rfd = "0.12.0"
serde_json = "1.0"

eframe = { version = "0.26.0", default-features = false, features = [
    "wgpu",
    "accesskit",
    "default_fonts",
]}
egui_extras = { version = "0.26.0" }
egui_plot = { version = "0.26.0" }

salon_core = { path = "../salon_core" }

instant = { version = "0.1.12" , features = ["wasm-bindgen"]}
log = { version = "0.4", features = ["std"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
# needs to specify exact version here, because web-sys under `web_sys_unstable_apis` doesn't follow SemVer rules, and 0.3.68 fails to compile..
web-sys = "=0.3.67" 

