[package]
name = "salon_exe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "salon_exe"
path = "src/main.rs"

[dependencies]
wgpu = "0.19.0"
bytemuck = "1.7.1"

eframe = { version = "0.26.2", default-features = false, features = [
    "wgpu",
    "accesskit",
    "default_fonts",
], git = "https://github.com/AmesingFlank/egui.git", branch = "with_table_cell_interact_fix"}
egui_extras = { version = "0.26.2", git = "https://github.com/AmesingFlank/egui.git", branch = "with_table_cell_interact_fix" }
egui_plot = { version = "0.26.2", git = "https://github.com/AmesingFlank/egui.git", branch = "with_table_cell_interact_fix" }

salon_core = { path = "../salon_core" }

instant = { version = "0.1.12" , features = ["wasm-bindgen"]}
log = { version = "0.4", features = ["std"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
futures = "0.3.0"
rfd = "0.12.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
# needs to specify exact version here, because web-sys under `web_sys_unstable_apis` doesn't follow SemVer rules, and 0.3.68 fails to compile..
web-sys = { version = "=0.3.67", features = [
    "Blob", "File", "FilePropertyBag", 'HtmlAnchorElement', 'HtmlInputElement', 'FileReader', 'Url',
]}
js-sys = "=0.3.67"
